# ai-python-starter-template

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/ai_starter/: __init__.py  config.py  logging.py  main.py
src/ai_starter/services/: example_service.py
tests/: test_example_service.py
